--- a/graph/package.json
+++ b/graph/package.json
@@ -3,12 +3,14 @@
   "version": "0.7.11",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "casual": "^1.5.19",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.17.3",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1"
   },
@@ -32,6 +34,6 @@
     "sqlite": "^2.9.1"
   },
   "scripts": {
-    "dev": "node ./entry-point.es6"
+    "dev": "nodemon --exec babel-node --watch=app ./serve.js"
   }
 }
