🚧  ⚙️  ajout d'une commande d'import d'archive DB pour le dev local

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "sh ./.scripts/yarn-build",
     "compose": "docker-compose -f docker-compose.yml -p assec up --build",
     "dump": "fab dump",
-    "deploy": "fab deploy"
+    "deploy": "fab deploy",
+    "import:local": "mongorestore --gzip --archive=backups/assec.gz"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
