--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
+    "lodash.omit": "^4.5.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.1.2",
