--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
     "express": "^4.16.3",
     "fast-deep-equal": "^1.1.0",
+    "graphql-tag": "^2.9.1",
     "history": "^4.7.2",
     "leaflet": "^1.3.1",
     "lodash.filter": "^4.6.0",
@@ -14,6 +19,8 @@
     "lodash.without": "^4.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.3",
+    "react-apollo-network-status": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-geolocated": "^2.3.0",
     "react-helmet": "^5.2.0",
