--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.12",
-    "apollo-client": "^2.2.8",
-    "apollo-link": "^1.2.2",
-    "apollo-link-http": "^1.5.4",
+    "apollo-boost": "^0.1.4",
     "express": "^4.16.3",
     "fast-deep-equal": "^1.1.0",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "history": "^4.7.2",
     "leaflet": "^1.3.1",
