--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "lodash.omit": "^4.5.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-ace": "^6.0.0",
     "react-apollo": "^2.1.2",
     "react-apollo-network-status": "^1.0.0",
     "react-color": "^2.14.0",
