--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lodash.filter": "^4.6.0",
     "lodash.map": "^4.6.0",
     "lodash.maxby": "^4.6.0",
+    "lodash.orderby": "^4.6.0",
     "lodash.without": "^4.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
