--- a/graph/package.json
+++ b/graph/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "bcrypt": "^1.0.3",
