--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
     "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-ace": "^6.0.0",
