--- a/graph/package.json
+++ b/graph/package.json
@@ -28,6 +28,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
     "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "lodash.times": "^4.3.2",
     "mongoose": "^5.0.12",
     "node-fetch": "^2.1.2",
