🚧  [ADMIN] mise a jour des fonts du projet

--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -143,6 +143,18 @@
       "css": "map",
       "code": 59414,
       "src": "entypo"
+    },
+    {
+      "uid": "f11c9e95ae5eaa84d193e8fa1d38c6f9",
+      "css": "down-open-mini",
+      "code": 59415,
+      "src": "entypo"
+    },
+    {
+      "uid": "9e251fb8e9e1c71ab09683468e0479a3",
+      "css": "up-open-mini",
+      "code": 59416,
+      "src": "entypo"
     }
   ]
 }
