🍿 stupid commit pour suppr l'emoticone de commit indiquant une erreur sur le fichier .stylelintrc.json

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,10 @@
     "color-hex-case": "upper",
     "color-hex-length": "long",
     "declaration-colon-newline-after": "always-multi-line",
-    "at-rule-no-unknown": [true, { "ignoreAtRules": ["extend", "if", "else", "elseif", "each"] }]
+    "at-rule-no-unknown": [
+      true, {
+      "ignoreAtRules": ["extend", "if", "else", "elseif", "each"]
+      }
+    ]
   }
 }
