🚧  [ADMIN] ajout de la page mon compte pour les administrateurs/contributeurs

--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -221,6 +221,12 @@
       "css": "left-open-mini",
       "code": 59426,
       "src": "entypo"
+    },
+    {
+      "uid": "bc64550dd022ce21604f97309b346cea",
+      "css": "cog",
+      "code": 59427,
+      "src": "entypo"
     }
   ]
 }
