🚧 🐳 add user to mongodb docker container

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -6,4 +6,5 @@ LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 WORKDIR /mongodb
 COPY ./mongod.conf .
 
+USER deploy
 CMD ["mongod", "-f", "/mongodb/mongod.conf", "--noauth"]
