--- a/admin/package.json
+++ b/admin/package.json
@@ -7,6 +7,7 @@
     "apollo-client": "^2.2.8",
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.3",
+    "apollo-link-redux": "^0.2.1",
     "express": "^4.16.3",
     "final-form": "^4.4.0",
     "final-form-arrays": "^1.0.4",
