🚧 [FRONTEND] replace frontend par landing page sur le port 3000
- comment de prettier sur le hook precommit (TODO)
- ajout de la doc pour la connection à mongodb

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "workspaces": [
     "admin",
     "graph",
-    "frontend"
+    "frontend",
+    "landingpage"
   ],
   "author": {
     "name": "Matthieu Lassalvy",
