--- a/landingpage/package.json
+++ b/landingpage/package.json
@@ -18,6 +18,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0"
   }
 }
