--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,8 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-define": "^1.3.0"
   }
 }
