--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - mongo
     environment:
-      - PORT=3200
+      - PORT=3300
       - NODE_ENV=development
       - VIRTUAL_HOST=graph.docker.loc
       - MONGO_DB_PORT=27017
@@ -38,7 +38,7 @@ services:
     depends_on:
       - graph
     environment:
-      - PORT=3100
+      - PORT=3200
       - NODE_ENV=development
       - VIRTUAL_HOST=admin.docker.loc
   widget:
@@ -50,9 +50,9 @@ services:
     depends_on:
       - graph
     environment:
-      - PORT=3000
+      - PORT=3100
       - NODE_ENV=development
-      - VIRTUAL_HOST=assec.docker.loc
+      - VIRTUAL_HOST=widget.docker.loc
   frontend:
     # les variables pour le build s'ajoute dans les fichier
     # - .env.staging
@@ -66,3 +66,5 @@ services:
       - PORT=3000
       - NODE_ENV=development
       - VIRTUAL_HOST=assec.docker.loc
+      - REACT_APP_WIDGET_URI=http://widget.docker.loc
+      - REACT_APP_GRAPHQL_URI=http://graph.docker.loc
