--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
