🚧  📚 ajout de documentation dans les fichiers .env + update de la commande de build

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+# Variables pour l'environnement de developement
+# Lance avec la commande `yarn dev`
 NODE_ENV=development
 MONGO_DB_PORT=27017
 MONGO_DB_NAME=assec
