--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
+# Variables pour l'environnement de production
+# lance avec la commande `yarn deploy`
+# via le script fabric `fabfile.py`
 NODE_ENV=production
 REACT_APP_VERSION=0.9.2
 REACT_APP_WIDGET_URI=http://wassec.iziges.fr
