--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,5 @@
+# Variables pour l'environnement de staging (preproduction)
+# Lance avec la commande `yarn build`
 NODE_ENV=development
 REACT_APP_VERSION=0.9.2
 REACT_APP_WIDGET_URI=http://widget.docker.loc
