--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": "^8.11.0"
   },
   "scripts": {
-    "dev": "nf start --env .env.foreman --port 3000",
+    "dev": "nf start --env .env.development --port 3000",
     "mongo": "mongod --config ./mongo/mongod.dev.conf",
     "prebump": "sh ./.scripts/git-ensure-clean",
     "bump": "node ./.scripts/yarn-bump",
