--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "foreman": "^2.0.0",
     "fs-extra": "^5.0.0",
     "husky": "^1.0.0-rc.2",
+    "node-sass": "^4.7.2",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1",
-    "semver": "^5.5.0"
+    "prettier-stylelint": "^0.4.2",
+    "semver": "^5.5.0",
+    "stylelint-config-standard": "^18.2.0"
   }
 }
