--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^0.1.2",
-    "koa": "^2.5.0",
-    "koa-router": "^7.4.0",
+    "dotenv": "^5.0.1",
     "next": "^5.1.0",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.9.0",
@@ -21,9 +20,7 @@
     "react-scroll": "^1.7.9",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-define": "^1.3.0"
+    "redux-form": "^7.3.0",
+    "webpack": "^4.6.0"
   }
 }
