--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "assec-backoffice",
   "version": "0.9.2",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.12",
