--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,16 @@
 # Variables pour l'environnement de staging (preproduction)
-# Lance avec la commande `yarn build`
+# commande `yarn compose`
+# avant de lancer la commande `compose` il faut build les apps
+# commande `yarn build`
+#
 NODE_ENV=development
+MONGO_DB_PORT=27017
+MONGO_DB_NAME=assec
+MONGO_DB_DOMAIN=mongo
+# !!! Only in production
+# MONGO_INITDB_DATABASE=assec
+# MONGO_INITDB_ROOT_USERNAME="admin"
+# MONGO_INITDB_ROOT_PASSWORD="password"
 REACT_APP_VERSION=0.9.2
 REACT_APP_WIDGET_URI=http://widget.docker.loc
 REACT_APP_GRAPHQL_URI=http://graph.docker.loc/graphql
