--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: '2'
 
-# FIXME ->
-# les variables d'env doivent venir des fichier .env
 services:
   nginx-proxy:
     image: jwilder/nginx-proxy
@@ -13,41 +11,40 @@ services:
     build: ./mongo
     expose:
       - 27017
-    environment:
-      - NODE_ENV=development
-      - MONGO_INITDB_DATABASE=assec
+    env_file:
+      - .env.staging
   graph:
     build: ./graph
     expose:
       - 3300
     depends_on:
       - mongo
+    env_file:
+      - .env.staging
     environment:
       - PORT=3300
-      - NODE_ENV=development
       - VIRTUAL_HOST=graph.docker.loc
-      - MONGO_DB_PORT=27017
-      - MONGO_DB_NAME=assec
-      - MONGO_DB_DOMAIN=mongo
   admin:
-    # les variables pour le build s'ajoute dans les fichier
-    # - .env.staging
     build: ./admin
     expose:
       - 3200
     depends_on:
       - graph
+      - mongo
+    env_file:
+      - .env.staging
     environment:
       - PORT=3200
       - VIRTUAL_HOST=admin.docker.loc
   widget:
-    # les variables pour le build s'ajoute dans les fichier
-    # - .env.staging
     build: ./widget
     expose:
       - 3100
     depends_on:
       - graph
+      - mongo
+    env_file:
+      - .env.staging
     environment:
       - PORT=3100
       - VIRTUAL_HOST=widget.docker.loc
@@ -59,9 +56,10 @@ services:
       - 3000
     depends_on:
       - graph
+      - mongo
       - widget
+    env_file:
+      - .env.staging
     environment:
       - PORT=3000
       - VIRTUAL_HOST=assec.docker.loc
-      - REACT_APP_WIDGET_URI=http://widget.docker.loc
-      - REACT_APP_GRAPHQL_URI=http://graph.docker.loc
