🚧 🐳 update momngodb config and env files
- rename .env.development to .env.loc
- add a local docker compose file
- update build and bump scripts

--- a/.env.loc
+++ b/.env.loc
@@ -1,4 +1,4 @@
-# Variables pour l'environnement de staging (preproduction)
+# Variables pour l'environnement de test docker en local
 # commande `yarn compose`
 # avant de lancer la commande `compose` il faut build les apps
 # commande `yarn build`
