--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "scripts": {
     "dev": "nf start --env .env.development --port 3000",
-    "mongo": "mongod --config ./mongo/mongod.dev.conf",
+    "mongo": "mongod --config ./mongod.loc.conf",
     "prebump": "sh ./.scripts/git-ensure-clean",
     "bump": "node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
-    "build": "sh ./.scripts/yarn-build",
-    "compose": "docker-compose -f docker-compose.yml -p assec up --build",
+    "build": "sh ./.scripts/yarn-build --default",
+    "compose": "docker-compose -f docker-compose.yml  -f ./docker-compose.loc.yml -p assec up --build",
     "dump": "fab dump",
     "dump:local": "mongodump --archive=backups/local.gz --gzip --db assec",
     "deploy": "fab deploy",
