--- a/mongo/mongod.conf
+++ b/mongo/mongod.conf
@@ -1,9 +1,10 @@
 systemLog:
-  verbosity: 0
   quiet: false
+  verbosity: 0
   traceAllExceptions: true
 net:
   port: '27017'
   bindIp: '127.0.0.1'
 storage:
   dbPath: '/data/db'
+  engine: 'wiredTiger'
