--- a/widget/package.json
+++ b/widget/package.json
@@ -3,6 +3,13 @@
   "version": "0.9.3",
   "private": true,
   "homepage": "./",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
+  },
   "dependencies": {
     "apollo-boost": "^0.1.4",
     "express": "^4.16.3",
