🚧 [GRAPH] compilation des fichiers pour la production avec babel
- l'application est maintenant servie dans un dossier build, elle doit être compilée avant d'utiliser docker-compose

--- a/graph/Dockerfile
+++ b/graph/Dockerfile
@@ -1,32 +1,18 @@
+# https://github.com/keymetrics/docker-pm2
 FROM node:8.11.1-alpine
 
-# maintainer of this docker file
 LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 
-#
-# NodeJS Docker Webapp - Official Doc
-# @see https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
-#
-# NodeJS / Docker - Best Practices
-# @see https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
-#
-# PM2 Docker Integration
-# @see http://pm2.keymetrics.io/docs/usage/docker-pm2-nodejs/
-#
+WORKDIR /home/node/server
+COPY package.json .
+COPY build ./public/
 
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
 
-WORKDIR /home/node/server
-COPY serve.js .
-COPY .babelrc .
-COPY app/ ./app/
-COPY package.json .
-COPY entry-point.es6 .
-
-RUN yarn global add pm2
+ENV NPM_CONFIG_LOGLEVEL warn
 RUN yarn install --production
 
 # !!! DO NOT RUN AS `ROOT` !!!
 USER node
-CMD ["pm2-runtime", "entry-point.es6"]
+CMD ["node", "public"]
