--- a/graph/package.json
+++ b/graph/package.json
@@ -2,24 +2,9 @@
   "name": "assec-api",
   "version": "0.9.3",
   "private": true,
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "casual": "^1.5.19",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.11.1",
-    "prettier-eslint": "^8.8.1"
-  },
   "dependencies": {
     "apollo-server-express": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
@@ -30,12 +15,16 @@
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lodash.times": "^4.3.2",
-    "mongoose": "^5.0.12",
-    "node-fetch": "^2.1.2",
-    "sequelize": "^4.37.5",
-    "sqlite": "^2.9.1"
+    "mongoose": "^5.0.12"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "nodemon": "^1.17.3"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node --watch=app ./serve.js"
+    "dev": "nodemon --exec babel-node --watch=server ./src/index.js",
+    "build": "babel ./src -d ./build",
+    "start": "node ./build/index.js"
   }
 }
