--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,7 @@
-#
-# NodeJS / Docker - Best Practices
-# @see https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
-#
-# PM2 Docker Integration
-# @see http://pm2.keymetrics.io/docs/usage/docker-pm2-nodejs/
-#
+# https://github.com/keymetrics/docker-pm2
 FROM node:8.11.1-alpine
 
-# maintainer of this docker file
 LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
-
-# expose ExpressJS server port to Docker
-# FIXME -> should be loaded from .env file
-ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
-ENV PATH=$PATH:/home/node/.npm-global/bin
 
 WORKDIR /home/node/www
 COPY package.json .
@@ -21,6 +9,10 @@ COPY next.config.js .
 COPY build/ ./build/
 COPY static/ ./static/
 
+ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
+ENV PATH=$PATH:/home/node/.npm-global/bin
+
+ENV NPM_CONFIG_LOGLEVEL warn
 RUN yarn install --production
 
 # !!! DO NOT RUN AS `ROOT` !!!
