--- a/widget/package.json
+++ b/widget/package.json
@@ -23,6 +23,7 @@
     "lodash.maxby": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.without": "^4.4.0",
+    "node-sass": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.1.3",
@@ -43,6 +44,7 @@
     "uuid": "^3.2.1"
   },
   "scripts": {
+    "prebuild": "npm run sass",
     "build": "echo \"Error: see file ./.scripts/yarn-build\"",
     "eject": "react-scripts eject",
     "generate:schema": "node ./.scripts/schema.js",
