⚙️  update build script

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "prebump": "sh ./.scripts/git-ensure-clean",
     "bump": "node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
-    "build": "sh ./.scripts/yarn-build --default",
-    "compose": "docker-compose -f docker-compose.yml  -f ./docker-compose.loc.yml -p assec up --build",
+    "build": "sh ./.scripts/yarn-build --env=local",
+    "compose": "docker-compose -f docker-compose.yml  -f ./docker-compose.local.yml -p assec up --build",
     "dump": "fab dump",
     "dump:local": "mongodump --archive=backups/local.gz --gzip --db assec",
     "deploy": "fab deploy",
