--- a/admin/package.json
+++ b/admin/package.json
@@ -47,11 +47,9 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "prebuild": "npm run sass",
-    "build": "echo \"Error: see file ./.scripts/yarn-build\"",
-    "eject": "echo \"Error: unused\"",
+    "prebuild": "./node_modules/.bin/node-sass -r src/scss/styles.scss src/styles.css --output-style compressed",
+    "build": "react-scripts build",
     "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom",
     "sass": "./node_modules/.bin/node-sass -w -r src/scss/styles.scss src/styles.css --output-style compressed"
   }
 }
