--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "dev": "nf start --env .env.development --port 3000",
-    "mongo": "mongod --config ./mongo/mongod.local",
+    "mongo": "mongod --dbpath /mongodb/db",
     "prebump": "sh ./.scripts/git-ensure-clean",
     "bump": "node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
