🚧 [FRONTEND] ajout du block 'qui sommes nous'
- update des icons fontello

--- a/frontend/static/fontello/config.json
+++ b/frontend/static/fontello/config.json
@@ -41,6 +41,30 @@
       "css": "thumbs-up",
       "code": 59397,
       "src": "entypo"
+    },
+    {
+      "uid": "d090355c31f497b61d676416c1fd39fb",
+      "css": "twitter",
+      "code": 62217,
+      "src": "entypo"
+    },
+    {
+      "uid": "7132e1233bc16cd1b6efe7e29d3613a5",
+      "css": "linkedin",
+      "code": 62232,
+      "src": "entypo"
+    },
+    {
+      "uid": "d94334f23acba022bfd68e49d76b31bb",
+      "css": "github",
+      "code": 62208,
+      "src": "entypo"
+    },
+    {
+      "uid": "513ac180ff85bd275f2b736720cbbf5e",
+      "css": "home",
+      "code": 59398,
+      "src": "entypo"
     }
   ]
 }
