--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
+    "react-sticky": "^6.0.2",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
