🚧 [FRONTEND] ajout de l'info bulle de validation d'email user

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,24 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^0.1.2",
+    "apollo-cache-inmemory": "^1.2.0",
     "apollo-link-http": "^1.5.4",
     "dotenv": "^5.0.1",
     "final-form": "^4.6.1",
     "graphql-tag": "^2.9.2",
+    "isemail": "^3.1.2",
     "next": "^5.1.0",
     "next-apollo": "^1.0.13",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.1.4",
+    "react-apollo-mutation-state": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.4.0",
     "react-scroll": "^1.7.9",
     "react-sticky": "^6.0.2",
+    "react-tippy": "^1.2.2",
     "webpack": "^4.6.0"
   },
   "scripts": {
