--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "isemail": "^3.1.2",
     "next": "^5.1.0",
     "next-apollo": "^1.0.13",
+    "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -26,9 +27,12 @@
     "react-apollo-mutation-state": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.4.0",
+    "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
     "react-sticky": "^6.0.2",
     "react-tippy": "^1.2.2",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "webpack": "^4.6.0"
   },
   "scripts": {
