--- a/frontend/static/fontello/config.json
+++ b/frontend/static/fontello/config.json
@@ -65,6 +65,12 @@
       "css": "home",
       "code": 59398,
       "src": "entypo"
+    },
+    {
+      "uid": "9bc2902722abb366a213a052ade360bc",
+      "css": "spin6",
+      "code": 59449,
+      "src": "fontelico"
     }
   ]
 }
