--- a/frontend/static/fontello/config.json
+++ b/frontend/static/fontello/config.json
@@ -71,6 +71,12 @@
       "css": "spin6",
       "code": 59449,
       "src": "fontelico"
+    },
+    {
+      "uid": "c709da589c923ba3c2ad48d9fc563e93",
+      "css": "cancel",
+      "code": 59399,
+      "src": "entypo"
     }
   ]
 }
