--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.4",
     "react-apollo-mutation-state": "^1.0.1",
