--- a/graph/package.json
+++ b/graph/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "isemail": "^3.1.2",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lodash.times": "^4.3.2",
