--- a/graph/package.json
+++ b/graph/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-date": "^1.0.3",
     "graphql-tools": "^2.23.1",
     "isemail": "^3.1.2",
     "lodash.omit": "^4.5.0",
