--- a/admin/package.json
+++ b/admin/package.json
@@ -37,11 +37,13 @@
     "react-final-form": "^3.1.5",
     "react-final-form-arrays": "^1.0.4",
     "react-helmet": "^5.2.0",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
+    "react-sizes": "^1.0.3",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
