🚧 [ADMIN] ajout de la gestion des blocks CMS pour le frontend

--- a/admin/src/static/fontello/config.json
+++ b/admin/src/static/fontello/config.json
@@ -239,6 +239,12 @@
       "css": "mail",
       "code": 59429,
       "src": "entypo"
+    },
+    {
+      "uid": "bcb868184ff9c35f8aef564f50c0d649",
+      "css": "feather",
+      "code": 59430,
+      "src": "entypo"
     }
   ]
 }
