--- a/admin/package.json
+++ b/admin/package.json
@@ -37,6 +37,7 @@
     "react-final-form": "^3.1.5",
     "react-final-form-arrays": "^1.0.4",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^3.3.2",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
