--- a/admin/src/static/fontello/config.json
+++ b/admin/src/static/fontello/config.json
@@ -245,6 +245,18 @@
       "css": "feather",
       "code": 59430,
       "src": "entypo"
+    },
+    {
+      "uid": "b6f32db98a3de777f5ae3005191b1831",
+      "css": "code",
+      "code": 59431,
+      "src": "entypo"
+    },
+    {
+      "uid": "25fc99a30fecc4021fdcae5fff5ba9ac",
+      "css": "eye",
+      "code": 59432,
+      "src": "entypo"
     }
   ]
 }
