--- a/.env.development
+++ b/.env.development
@@ -4,10 +4,11 @@ NODE_ENV=development
 MONGO_DB_PORT=27017
 MONGO_DB_NAME=assec
 MONGO_DB_DOMAIN=localhost
+REACT_APP_VERSION=0.9.13
+REACT_APP_IGN_KEY=rmfa2vjyiac28bk0sak1m986
+REACT_APP_WIDGET_URI=http://localhost:3100
+REACT_APP_GRAPHQL_URI=http://localhost:3300/graphql
 # !!! Only in production
 # MONGO_INITDB_DATABASE=assec
 # MONGO_INITDB_ROOT_USERNAME="admin"
 # MONGO_INITDB_ROOT_PASSWORD="password"
-REACT_APP_VERSION=0.9.13
-REACT_APP_WIDGET_URI=http://localhost:3100
-REACT_APP_GRAPHQL_URI=http://localhost:3300/graphql
