--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ MONGO_DB_PORT=27017
 MONGO_DB_NAME=assec
 MONGO_DB_DOMAIN=mongo
 REACT_APP_VERSION=0.9.13
+REACT_APP_IGN_KEY=rmfa2vjyiac28bk0sak1m986
 REACT_APP_WIDGET_URI=http://widget.iziges.fr
 REACT_APP_GRAPHQL_URI=http://graph.iziges.fr/graphql
 # !!! Only in production
