🚧 [WIDGET] modification de la vue carte
- suppr des boutons de zoom
- udpate de la documentation
- ajout du bouton de la vue satellite
- position de la tooltip sur une zone
- ajout du bouton de la vue géolocalisation
- move des fichiers leaflet inputs dans le dossier inputs

--- a/widget/package.json
+++ b/widget/package.json
@@ -30,6 +30,7 @@
     "react-apollo-network-status": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-geolocated": "^2.3.0",
+    "react-geolocation": "^1.0.3",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.9.1",
     "react-redux": "^5.0.7",
