🚧 🐳 update du domaine pour le widget

--- a/.env.production
+++ b/.env.production
@@ -6,8 +6,8 @@ MONGO_DB_NAME=assec
 MONGO_DB_DOMAIN=mongo
 REACT_APP_VERSION=0.10.2
 REACT_APP_IGN_KEY=rmfa2vjyiac28bk0sak1m986
-REACT_APP_WIDGET_URI=http://widget.iziges.fr
 REACT_APP_GRAPHQL_URI=http://graph.iziges.fr/graphql
+REACT_APP_WIDGET_URI=http://widget.assec.beta.gouv.fr
 # !!! Only in production
 MONGO_INITDB_DATABASE=assec
 # MONGO_INITDB_ROOT_USERNAME="admin"
