--- a/frontend/static/fontello/config.json
+++ b/frontend/static/fontello/config.json
@@ -77,6 +77,12 @@
       "css": "cancel",
       "code": 59399,
       "src": "entypo"
+    },
+    {
+      "uid": "922ab2cb66943a83de969990289ef1dc",
+      "css": "docs",
+      "code": 59401,
+      "src": "entypo"
     }
   ]
 }
