--- a/admin/src/static/fontello/config.json
+++ b/admin/src/static/fontello/config.json
@@ -263,6 +263,12 @@
       "css": "clipboard",
       "code": 59433,
       "src": "entypo"
+    },
+    {
+      "uid": "3626b3f3a0b284e7f4166b815719aece",
+      "css": "list",
+      "code": 59434,
+      "src": "entypo"
     }
   ]
 }
