--- a/widget/package.json
+++ b/widget/package.json
@@ -33,6 +33,7 @@
     "react-geolocation": "^1.0.3",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.9.1",
+    "react-markdown": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
