--- a/widget/package.json
+++ b/widget/package.json
@@ -8,7 +8,8 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "node-sass": "^4.7.2"
   },
   "dependencies": {
     "apollo-boost": "^0.1.4",
@@ -23,13 +24,12 @@
     "lodash.maxby": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.without": "^4.4.0",
-    "node-sass": "^4.7.2",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.3",
     "react-apollo-network-status": "^1.0.0",
     "react-dom": "^16.2.0",
-    "react-geolocated": "^2.3.0",
     "react-geolocation": "^1.0.3",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.9.1",
