🚧 [ADMIN] replace du markdown editor par un markdown wysiwyg

--- a/admin/package.json
+++ b/admin/package.json
@@ -8,7 +8,8 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "node-sass": "^4.7.2"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.12",
@@ -16,6 +17,10 @@
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.3",
     "apollo-link-redux": "^0.2.1",
+    "compression": "^1.7.2",
+    "draft-js": "^0.10.5",
+    "draft-js-import-markdown": "^1.2.1",
+    "draftjs-to-markdown": "^0.5.1",
     "express": "^4.16.3",
     "final-form": "^4.4.0",
     "final-form-arrays": "^1.0.4",
@@ -25,7 +30,6 @@
     "history": "^4.7.2",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
-    "node-sass": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-ace": "^6.0.0",
@@ -34,10 +38,10 @@
     "react-color": "^2.14.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-final-form": "^3.1.5",
     "react-final-form-arrays": "^1.0.4",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^3.3.2",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
