--- a/widget/package.json
+++ b/widget/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.4",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-redux": "^0.2.1",
     "express": "^4.16.3",
-    "fast-deep-equal": "^1.1.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
-    "history": "^4.7.2",
     "leaflet": "^1.3.1",
     "lodash.filter": "^4.6.0",
     "lodash.map": "^4.6.0",
@@ -35,15 +38,10 @@
     "react-leaflet": "^1.9.1",
     "react-markdown": "^3.3.2",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0",
-    "uuid": "^3.2.1"
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "prebuild": "node-sass -r ./src/scss/styles.scss ./src/styles.css --output-style compressed",
