--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "final-form": "^4.6.1",
     "graphql-tag": "^2.9.2",
     "isemail": "^3.1.2",
+    "marked": "^0.3.19",
     "next": "^5.1.0",
     "next-apollo": "^1.0.13",
     "next-redux-wrapper": "^1.3.5",
@@ -30,6 +31,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.4.0",
+    "react-markdown": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
     "react-sticky": "^6.0.2",
