🚧 [ADMIN] ajout du bouton pour rendre optionnel la visibilite des zones sur la carte

--- a/widget/src/static/fontello/config.json
+++ b/widget/src/static/fontello/config.json
@@ -95,6 +95,12 @@
       "css": "map",
       "code": 59405,
       "src": "entypo"
+    },
+    {
+      "uid": "8ce732688587909ad0a9d8323eaca8ad",
+      "css": "marquee",
+      "code": 59463,
+      "src": "fontelico"
     }
   ]
 }
