--- a/graph/package.json
+++ b/graph/package.json
@@ -3,6 +3,10 @@
   "version": "0.10.6",
   "private": true,
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
+    "@turf/center": "^6.0.1",
+    "@turf/clean-coords": "^6.0.1",
+    "@turf/transform-scale": "^5.1.5",
     "apollo-server-express": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "body-parser": "^1.18.2",
@@ -10,12 +14,12 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "geojson-dissolve": "^3.1.0",
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
     "graphql-tools": "^2.23.1",
     "isemail": "^3.1.2",
     "lodash.omit": "^4.5.0",
-    "lodash.orderby": "^4.6.0",
     "lodash.pick": "^4.4.0",
     "mongoose": "^5.0.12",
     "zlib": "^1.0.5"
