--- a/graph/package.json
+++ b/graph/package.json
@@ -17,6 +17,7 @@
     "geojson-dissolve": "^3.1.0",
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
+    "graphql-geojson": "^1.0.0",
     "graphql-tools": "^2.23.1",
     "isemail": "^3.1.2",
     "lodash.omit": "^4.5.0",
