--- a/widget/package.json
+++ b/widget/package.json
@@ -33,6 +33,7 @@
     "react-apollo": "^2.1.3",
     "react-apollo-network-status": "^1.0.0",
     "react-dom": "^16.2.0",
+    "react-final-form": "^3.4.0",
     "react-geolocation": "^1.0.3",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.9.1",
@@ -41,8 +42,7 @@
     "react-scripts": "1.1.1",
     "react-tippy": "^1.2.2",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0"
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
     "prebuild": "node-sass -r ./src/scss/styles.scss ./src/styles.css --output-style compressed",
