--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assec",
-  "version": "0.10.2",
+  "version": "0.10.2-master",
   "license": "ISC",
   "description": "ASSEC",
   "private": true,
