--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-scroll": "^1.7.9",
     "react-sticky": "^6.0.2",
     "react-tippy": "^1.2.2",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "webpack": "^4.6.0"
