--- a/widget/src/static/fontello/config.json
+++ b/widget/src/static/fontello/config.json
@@ -67,12 +67,6 @@
       "src": "entypo"
     },
     {
-      "uid": "9bc2902722abb366a213a052ade360bc",
-      "css": "spin6",
-      "code": 59449,
-      "src": "fontelico"
-    },
-    {
       "uid": "85017ab6ca074831a8de771b40e9640c",
       "css": "camera",
       "code": 59403,
@@ -119,6 +113,18 @@
       "css": "check",
       "code": 59408,
       "src": "entypo"
+    },
+    {
+      "uid": "53ed8570225581269cd7eff5795e8bea",
+      "css": "emo-unhappy",
+      "code": 59409,
+      "src": "fontelico"
+    },
+    {
+      "uid": "9bc2902722abb366a213a052ade360bc",
+      "css": "spin6",
+      "code": 59449,
+      "src": "fontelico"
     }
   ]
 }
