--- a/widget/package.json
+++ b/widget/package.json
@@ -40,6 +40,7 @@
     "react-markdown": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "react-select": "^1.2.1",
     "react-tippy": "^1.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2"
