--- a/widget/package.json
+++ b/widget/package.json
@@ -17,6 +17,7 @@
     "apollo-client": "^2.3.1",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
+    "deep-equal": "^1.0.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
