🚧 [ADMIN] fix du markdown editor pour les sauts de ligne

--- a/admin/package.json
+++ b/admin/package.json
@@ -19,8 +19,8 @@
     "apollo-link-redux": "^0.2.1",
     "compression": "^1.7.2",
     "draft-js": "^0.10.5",
+    "draft-js-export-markdown": "^1.2.0",
     "draft-js-import-markdown": "^1.2.1",
-    "draftjs-to-markdown": "^0.5.1",
     "express": "^4.16.3",
     "final-form": "^4.4.0",
     "final-form-arrays": "^1.0.4",
