--- a/widget/package.json
+++ b/widget/package.json
@@ -19,9 +19,11 @@
     "apollo-link-http": "^1.5.4",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
+    "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "leaflet": "^1.3.1",
+    "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
     "react": "^16.2.0",
@@ -37,7 +39,9 @@
     "react-select": "^1.2.1",
     "react-sizes": "^1.0.3",
     "react-tippy": "^1.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "semver": "^5.5.0",
+    "winston": "^2.4.2"
   },
   "scripts": {
     "prebuild": "node-sass -r ./src/scss/styles.scss ./src/styles.css --output-style compressed",
