--- a/widget/package.json
+++ b/widget/package.json
@@ -17,6 +17,7 @@
     "apollo-client": "^2.3.1",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
+    "core-js": "^2.5.6",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
     "express-useragent": "^1.0.12",
@@ -26,6 +27,7 @@
     "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.2.0",
