--- a/widget/package.json
+++ b/widget/package.json
@@ -23,6 +23,7 @@
     "express-useragent": "^1.0.12",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
+    "isemail": "^3.1.2",
     "leaflet": "^1.3.1",
     "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
