--- a/.kiss/.env.example
+++ b/.kiss/.env.example
@@ -6,8 +6,8 @@ MONGO_DB_NAME=assec
 MONGO_DB_DOMAIN=localhost
 REACT_APP_VERSION=0.11.6
 REACT_APP_IGN_KEY=rmfa2vjyiac28bk0sak1m986
-REACT_APP_WIDGET_URI=http://192.168.1.99:3100
-REACT_APP_GRAPHQL_URI=http://192.168.1.99:3300/graphql
+REACT_APP_WIDGET_URI=http://localhost:3100
+REACT_APP_GRAPHQL_URI=http://localhost:3300/graphql
 # !!! Only in production
 # MONGO_INITDB_DATABASE=assec
 # MONGO_INITDB_ROOT_USERNAME="admin"
