--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "assec",
   "version": "0.11.10",
   "license": "ISC",
+  "homepage": "./dist",
   "description": "Version Statique ASSEC",
   "private": true,
   "author": {
