--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assec",
   "version": "0.11.10",
   "license": "ISC",
-  "homepage": "./",
+  "homepage": "./static",
   "description": "Version Statique ASSEC",
   "private": true,
   "author": {
